--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,13 +15,9 @@
             </ion-item>
             <ion-item class="indicador">
                 <span class="title">Valor UF</span>
-                <span class="valor">{{indicadoresEco.valor_UF | number: '1.0' | pointReplacer}}</span>
+                <span class="valor">{{indicadoresEco.valor_UF | number:'2.2-2':'es-CL'}}</span>
             </ion-item>
         </ion-list>
-        <ion-footer class="lastUpdate">
-            <div class="version">{{versionApp}}</div>
-            <div class="date">Última descarga de datos: {{indicadoresEco_date | date : "dd ' ' MMMM ' ' yyyy"}}</div>
-        </ion-footer>
     </ion-content>
 </ion-menu>
 <ion-nav #contenido [root]="rootPage"></ion-nav>
