--- a/src/pages/noticias/noticias.scss
+++ b/src/pages/noticias/noticias.scss
@@ -2,8 +2,47 @@ page-noticias {
     h1 {
         margin-top: 0.5rem;
     }
-    .imageNoticia lazy-img > div {
-        min-height: 200px;
+    .imageNoticia lazy-img>div {
+        min-height: 130px;
     }
-
+    .infinite-loading-text {
+        font-family: 'CircularStd';
+        font-size: 1.6rem;
+        line-height: 1.8rem;
+        color: color($colors, dark);
+    }
+    .searchButton {
+        width: 100%;
+        height: 100% !important;
+        padding: 0 !important;
+        font-size: 2.6rem;
+        background: none;
+        ion-icon {
+            color: color($colors, titles);
+        }
+    }
+    .sinResultados {
+        margin-top: 1rem;
+        font-family: 'CircularStd';
+        font-size: 2.4rem;
+        line-height: 2.6rem;
+        color: color($colors, dark);
+        text-align: center;
+    }
+    ion-searchbar.searchbar {
+        border-bottom: 0;
+    }
+    form.buscadorNoticias {
+        ion-col {
+            padding-bottom: 0;
+        }
+        .searchbar-search-icon {
+            display: none;
+        }
+        border-bottom: 1px solid #C7C7C7;
+        margin-bottom: 8px;
+        .searchbar-ios.searchbar-left-aligned .searchbar-input {
+            padding-left: 0px;
+        }
+    }
 }
